Added comments to all files